ansible/kubernetes/service-moodle.yml
apiVersion: v1
kind: Service
metadata:
  name: moodle-devops095
spec:
  ports:
  - name: front
    port: 80
  selector:
    name: moodle-devops095
  type: LoadBalancer
