ansible/kubernetes/service-np-moodle.yml
apiVersion: v1
kind: Service
metadata:
  name: moodle-devops095
spec:
  ports:
  - port: 80
  selector:
    name: moodle-devops095
  type: NodePort
